--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
 
   <div >
-    <img class="chavela-img" src="/young_chavela.jpg" alt="Young Chavela Vargas"> 
+    <img class="chavela-img" src="./young_chavela.jpg" alt="Young Chavela Vargas"> 
   </div>
 </div>  
 <!-- start of timeline  -->
