--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
         <li><span class='bold'>1990s</span> - Launched a remarkable international comeback, championed by Spanish filmmaker Pedro Almodóvar.</li>
         <li><span class='bold'>2012</span> - Died in Cuernavaca, Mexico. </li>
       </ul>
-    <h5>If you have time, you should read more about this incredible human being on her <a id="tribute-link"
+<!--     <h5>If you have time, you should read more about this incredible human being on her <a id="tribute-link"
     href="https://en.wikipedia.org/wiki/Chavela_Vargas" target="_blank">Wikipedia Page</a>.
-    </h5> 
+    </h5>  -->
   </section>
   <!-- javascript -->
   <script src="app.js"></script>
