--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
     <div class="quote-resize">
     <h5 id="author">"Voy a gritar con toda mi alma para que el mundo sepa que estoy viva. Viva de tanto vivir. Viva de tanto amar."</h5>
     </div>
-    <button class="btn btn-hero" id="btn">click me</button>
+    <div class= "btn-position">
+     <button class="btn btn-hero" id="btn">More Quotes</button>
+    </div>
   </div>
 
   <div >
@@ -74,9 +76,9 @@
         <li><span class='bold'>1990s</span> - Launched a remarkable international comeback, championed by Spanish filmmaker Pedro Almodóvar.</li>
         <li><span class='bold'>2012</span> - Died in Cuernavaca, Mexico. </li>
       </ul>
-<!--     <h5>If you have time, you should read more about this incredible human being on her <a id="tribute-link"
+    <h6 id="ending">If you have time, you should read more about this incredible human being on her <a id="tribute-link"
     href="https://en.wikipedia.org/wiki/Chavela_Vargas" target="_blank">Wikipedia Page</a>.
-    </h5>  -->
+    </h6> 
   </section>
   <!-- javascript -->
   <script src="app.js"></script>
